<resources>
    <string name="app_name">IPTV Client</string>
    <string name="plot_text_test">The sitcom is centered on five characters living in Pasadena, California: roommates Leonard Hofstadter and Sheldon Cooper; Penny, a waitress and aspiring actress who lives across the hall; and Leonard and Sheldon\'s equally geeky and socially awkward friends and co-workers, mechanical engineer Howard Wolowitz and astrophysicist Raj Koothrappali. The geekiness and intellect of the four guys is contrasted for comic effect with Penny\'s social skills and common sense.</string>
    <string name="cast_text_test"><![CDATA[<b>Cast:</b>  %1$s]]></string>
    <string name="director_text_test"><![CDATA[<b>Director:</b>  %1$s]]></string>
    <string name="continue_watch">Continue Watch</string>
    <string name="one_season">1 Season</string>
    <string name="open_details">Open Details</string>
    <string name="download_file">Download File</string>
    <string name="remove_from_continue_watch">Remove from Continue Watch</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet. Vel nihil nesciunt non nemo quia ut galisum dolores quo nisi ducimus et culpa libero eum quod consequuntur ut nihil ipsa. Ut dolor rerum id dolor omnis aut Quis omnis. Est doloremque earum ad quam sapiente est quis animi 33 maiores placeat.</string>
    <string name="sign_in">Sign In</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_buttom_nav">ButtomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="download">Download</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="live">Live</string>
    <string name="gallery">Gallery</string>
    <string name="categories">Categories</string>
</resources>