<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/progressConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/safe_area">

    <TextView
        android:id="@+id/title"
        style="@style/TextViewBoldColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="The Big Bang Theory S01 E01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/progress"
        layout="@layout/progress_bar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/plotTextView"
        style="@style/TextViewRegularColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="5"
        android:text="@string/plot_text_test"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <TextView
        android:id="@+id/castTextView"
        style="@style/TextViewRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cast_text_test"
        app:layout_constraintTop_toBottomOf="@+id/plotTextView" />

    <TextView
        android:id="@+id/directorTextView"
        style="@style/TextViewRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/director_text_test"
        app:layout_constraintTop_toBottomOf="@+id/castTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>