<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/safe_area"
        app:layout_constraintTop_toBottomOf="@+id/cover">

        <TextView
            android:id="@+id/name"
            style="@style/TextViewBoldColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Big Bang Theory"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/TextViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2018"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/seasonCount"
            style="@style/TextViewRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="12 Seasons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/releaseDate"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonConstraintLayout"
        style="@style/TextViewRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/safe_area"
        app:layout_constraintTop_toBottomOf="@+id/headerConstraintLayout">

        <Button
            android:id="@+id/play"
            style="@style/ButtonPrimaryStyle"
            android:layout_width="match_parent"
            android:text="Play"
            app:icon="@drawable/ic_play"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/safe_area"
        app:layout_constraintTop_toBottomOf="@+id/buttonConstraintLayout">

        <TextView
            android:id="@+id/title"
            style="@style/TextViewBoldColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Big Bang Theory S01 E01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/progress"
            layout="@layout/progress_bar_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/plot"
            style="@style/TextViewRegularColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="5"
            android:text="@string/plot_text_test"
            app:layout_constraintTop_toBottomOf="@+id/progress" />

        <TextView
            android:id="@+id/cast"
            style="@style/TextViewRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cast_text_test"
            app:layout_constraintTop_toBottomOf="@+id/plot" />

        <TextView
            android:id="@+id/director"
            style="@style/TextViewRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/director_text_test"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>